<resources>
    <string name="app_name">BuddyBench</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="avatar_content_description">avatar</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="caption">Caption</string>
    <string name="preference_file_key">buddyBenchPreferencesFile</string>
    <string name="newbie">Newbie</string>
    <string name="sports_section">Played sports</string>
    <string name="games_section">Games statistics</string>
    <string name="reliability">Reliability</string>
    <string name="reliabilityValue">%1$d%%</string>
    <string name="played">Played</string>
    <string name="organized">Organized</string>
    <string name="sport_tennis">Tennis</string>
    <string name="games_played_default">100 games played</string>
    <string name="profile_photo_cd">profile_photo_cd</string>
    <string name="games_played">%1$s games played</string>
    <string name="turin">Turin</string>
    <string name="age">%1$d y.o.</string>
    <string name="location_icon">location icon</string>
    <string name="save">SAVE</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="no_sports">No sports yet, add new ones!</string>
    <string name="edit_your_sports">Edit your sports</string>
    <string name="add_sports">Add sports</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
    <string name="takePhoto">Take a photo</string>
    <string name="goGallery">Choose from gallery</string>
    <string name="profileImage">profile%1$s.jpg</string>
    <string name="imageDir">imageDir</string>
    <string name="errorOnEdit">Please fill the highlighted fields!</string>
    <string name="errorOnEmail">Please provide a valid email!</string>
    <string name="amateur">Amateur</string>
    <string name="skilled">Skilled</string>
    <string name="professional">Pro</string>
    <string name="champion">Champion</string>
    <string name="email">Email</string>
    <string name="errorBirthdate">You live in the future?</string>
    <string name="nameLabel">First Name</string>
    <string name="surnameLabel">Last Name</string>
    <string name="nicknameLabel">Nickname</string>
    <string name="emailLabel">Email</string>
    <string name="localityLabel">Locality</string>
    <string name="birthdateLabel">Birthdate</string>
    <string name="nickname">Nickname</string>
    <string name="full_name">Full Name</string>
    <string name="manage">Manage</string>
    <string name="court_price">12 €/h</string>
    <string name="court_name">Tennis Club</string>
    <string name="court_address">Torino, Via Roma 16</string>
    <string name="overflowReservations">+</string>
    <string name="title_activity_court">CourtActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="court_rating">4.5</string>
    <string name="sport_choice">Sport choice</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="court_image">court_image</string>
    <string name="price_text">15 €/h</string>
    <string name="rating_default_value">4.5</string>
    <string name="reviews_number">(11)</string>
    <string name="court_information">Court Information</string>
    <string name="via_roma_16_torino">Via Roma 16, Torino</string>
    <string name="opening_hours_default">8:00 - 23:00</string>
    <string name="book">Book</string>
    <string name="court_fee">%1$s €/h</string>
    <string name="friday">Friday</string>
    <string name="_21">21</string>
    <string name="april">Apr</string>
    <string name="reservation">Reservation</string>
    <string name="hour_range">10:00 - 11:00</string>
    <string name="recap_and_confirm">Recap and confirm</string>
    <string name="wednesday_19_april">%1$s</string>
    <string name="confirm">Confirm</string>
    <string name="which_sport_do_you_want_to_play">Which sport do you want to play?</string>
    <string name="court_search_phrase">You are currently looking for %1$s courts</string>
    <string name="user_hello">Hi, %1$s!</string>
    <string name="equipment">All the equipment will be available at the price of</string>
    <string name="filters">Filters</string>
    <string name="show_filter_results">Show Results</string>
    <string name="clear">Clear</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price: %1$s</string>
    <string name="equipment_phrase">Renting Equipment: %1$d €/h</string>
    <string name="facility_list">Facilities: </string>
    <string name="additional_information">Additional Informations</string>
    <string name="informations_body">\nTo access the court %1$s, the following rules must be respected:\n\n- Maintain appropriate behavior\n- Respect the practical rules of the %2$s\n- Respect others, especially regarding noise pollution\n\n\n</string>
    <string name="informations_body_edit">\nTo access the court %1$s, the following rules must be respected:\n\n- Maintain appropriate behavior\n- Respect the practical rules of the %2$s\n- Respect others, especially regarding noise pollution\n- The refund will be given to the court before the start of the reservation\n\n\n </string>
    <string name="accept_informations">Accept</string>
    <string name="price_details_title">Price Details</string>
    <string name="field_cost">Field</string>
    <string name="equipment_cost">Equipment</string>
    <string name="cost_example">%1$d €</string>
    <string name="total_cost">Total (EUR)</string>
    <string name="court_address_card">%1$s, %2$s</string>
    <string name="error_info">Make sure to accept the additional information of %1$s</string>
    <string name="error_book">Before booking, select at least one time slot</string>
    <string name="time_selected"> %1$s - %2$s</string>
    <string name="delete"> Delete </string>
    <string name="confirm_delete">Are you sure to delete this reservation?</string>
    <string name="search">Search by locality or court name</string>
    <string name="confirmation_delete">Yes, delete the reservation</string>
    <string name="no_courts">No courts found based on the search criteria</string>
    <string name="no_reservation">No reservations for this day</string>
    <string name="phone_number">+391231231212</string>
    <string name="sport_basketball">basketball</string>
    <string name="see_all">See all reviews</string>
    <string name="google_oauth_client_id">893031240238-qddg6odr6tnqbi1v799stjcbktl304lp.apps.googleusercontent.com</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="no_reviews">There are no reviews for this court</string>
    <string name="date">23/03/2023</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="review">Review</string>
    <string name="num_ratings">based on %1$s reviews</string>
    <string name="write_your_review">Write your review</string>
    <string name="cannot_review">You must have played in this court before leaving a review</string>
    <string name="your_review">Your review</string>
    <string name="missing_rating">Missing rating</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="list">List</string>
    <string name="friend_profile_image">friend_profile_image</string>
    <string name="buddy_bench">Buddy Bench</string>
</resources>