<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.court.ReviewsActivity"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TabLayout"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_weight="0.5"
            android:id="@+id/back_button_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow_edit"
            android:scaleX="-1" />

        <TextView
            android:id="@+id/tv_court_name_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold_700"
            android:maxLines="2"
            android:text="@string/profile"
            style="@style/TabName"
            android:ellipsize="end"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/button_to_edit"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/round_edit_24"
            android:visibility="invisible"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_review_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/court_rating"
            android:layout_gravity="center"
            android:textSize="36sp" />

        <RatingBar
            android:id="@+id/rb_review_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_gravity="center"
            android:progressTint="@color/gold"
            style="@style/Widget.AppCompat.RatingBar.Small" />

        <TextView
            android:id="@+id/tv_num_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/num_ratings" />

    </LinearLayout>


    <TextView
        android:visibility="gone"
        android:id="@+id/tv_cannot_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:padding="16dp"
        android:text="@string/cannot_review"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/round_info_24" />


    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/card_your_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="8dp"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_semibold_600"
                    android:text="@string/your_review" />

                <ImageButton
                    android:id="@+id/btn_edit_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_edit_24"
                    android:contentDescription="@string/edit"
                    android:backgroundTint="@color/md_theme_light_primary" />

            </LinearLayout>

            <RatingBar
                android:id="@+id/rb_your_review"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:paddingVertical="8dp"
                android:progressTint="@color/gold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_your_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_your_review"
                android:textColor="@color/md_theme_light_outline" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:visibility="visible"
        android:id="@+id/card_new_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:elevation="2dp"
        android:padding="8dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold_600"
                android:text="@string/leave_a_review" />

            <RatingBar
                android:id="@+id/rb_new_review"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:paddingVertical="8dp"
                android:isIndicator="false"
                android:progressTint="@color/gold"
                android:stepSize="1"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/et_new_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/write_your_review"
                android:fontFamily="@font/montserrat_medium_500"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="5"
                android:scrollbars="vertical"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_error_review"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/missing_rating"
                android:layout_marginBottom="8dp"
                android:textColor="@color/error"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/round_error_24" />



            <Button
                android:id="@+id/btn_new_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_shape"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textColor="@color/md_theme_light_background"
                android:fontFamily="@font/montserrat_semibold_600"
                android:textAllCaps="false"
                android:text="@string/review" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pb_reviews"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_no_reviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_reviews"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/md_theme_light_outline"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_new_review" />

</LinearLayout>