<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.court.ReviewsBottomSheet"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/back_button_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_background"
            android:contentDescription="@string/close"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/round_arrow_back_24_primary" />

        <TextView
            android:id="@+id/tv_court_name_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/court_name"
            android:fontFamily="@font/montserrat_semibold_600"
            android:textSize="20sp"
            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_reviews"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_no_reviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_reviews"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/md_theme_light_outline"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:layout_marginVertical="16dp"/>

</LinearLayout>